Better Docs, added exectuable jar